Analyse_semantique/analyse/Tiger3Parser.java
package analyse;
// $ANTLR 3.5.1 D:\\Programmation\\albert22u\\Analyse_lexicale_et_syntaxique\\Tiger3.g 2016-03-31 15:48:26

import java.util.HashMap;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

import org.antlr.runtime.tree.*;


@SuppressWarnings("all")
public class Tiger3Parser extends Parser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "BEGIN", "BLOCK", "CELL", "COMMENT", 
		"COMMENT2", "COMP", "COND", "CONST", "DECLARATIONS", "EMPTY_SEQ", "END", 
		"FIELD", "FUNC_CALL", "FUNC_DECL", "ID", "IDF", "INIT", "INT", "NEG", 
		"NEWLINE", "PARAM", "PARAMSEFF", "PARAMSFORM", "PRIMITIF", "SIZE", "STRING", 
		"STRUCT", "TAB", "TAIGA", "TYPE", "WS", "'&'", "'('", "')'", "'*'", "'+'", 
		"','", "'-'", "'.'", "'/'", "':'", "':='", "';'", "'<'", "'='", "'>'", 
		"'['", "']'", "'array of'", "'array'", "'block'", "'break'", "'do'", "'else'", 
		"'end'", "'for'", "'function'", "'if'", "'in'", "'int'", "'let'", "'nil'", 
		"'of'", "'string'", "'then'", "'to'", "'type'", "'typedef'", "'var'", 
		"'while'", "'{'", "'|'", "'}'"
	};
	public static final int EOF=-1;
	public static final int T__35=35;
	public static final int T__36=36;
	public static final int T__37=37;
	public static final int T__38=38;
	public static final int T__39=39;
	public static final int T__40=40;
	public static final int T__41=41;
	public static final int T__42=42;
	public static final int T__43=43;
	public static final int T__44=44;
	public static final int T__45=45;
	public static final int T__46=46;
	public static final int T__47=47;
	public static final int T__48=48;
	public static final int T__49=49;
	public static final int T__50=50;
	public static final int T__51=51;
	public static final int T__52=52;
	public static final int T__53=53;
	public static final int T__54=54;
	public static final int T__55=55;
	public static final int T__56=56;
	public static final int T__57=57;
	public static final int T__58=58;
	public static final int T__59=59;
	public static final int T__60=60;
	public static final int T__61=61;
	public static final int T__62=62;
	public static final int T__63=63;
	public static final int T__64=64;
	public static final int T__65=65;
	public static final int T__66=66;
	public static final int T__67=67;
	public static final int T__68=68;
	public static final int T__69=69;
	public static final int T__70=70;
	public static final int T__71=71;
	public static final int T__72=72;
	public static final int T__73=73;
	public static final int T__74=74;
	public static final int T__75=75;
	public static final int T__76=76;
	public static final int BEGIN=4;
	public static final int BLOCK=5;
	public static final int CELL=6;
	public static final int COMMENT=7;
	public static final int COMMENT2=8;
	public static final int COMP=9;
	public static final int COND=10;
	public static final int CONST=11;
	public static final int DECLARATIONS=12;
	public static final int EMPTY_SEQ=13;
	public static final int END=14;
	public static final int FIELD=15;
	public static final int FUNC_CALL=16;
	public static final int FUNC_DECL=17;
	public static final int ID=18;
	public static final int IDF=19;
	public static final int INIT=20;
	public static final int INT=21;
	public static final int NEG=22;
	public static final int NEWLINE=23;
	public static final int PARAM=24;
	public static final int PARAMSEFF=25;
	public static final int PARAMSFORM=26;
	public static final int PRIMITIF=27;
	public static final int SIZE=28;
	public static final int STRING=29;
	public static final int STRUCT=30;
	public static final int TAB=31;
	public static final int TAIGA=32;
	public static final int TYPE=33;
	public static final int WS=34;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public Tiger3Parser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	public Tiger3Parser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
	}

	protected TreeAdaptor adaptor = new CommonTreeAdaptor();

	public void setTreeAdaptor(TreeAdaptor adaptor) {
		this.adaptor = adaptor;
	}
	public TreeAdaptor getTreeAdaptor() {
		return adaptor;
	}
	@Override public String[] getTokenNames() { return Tiger3Parser.tokenNames; }
	@Override public String getGrammarFileName() { return "D:\\Programmation\\albert22u\\Analyse_lexicale_et_syntaxique\\Tiger3.g"; }


	/** Map variable name to Integer object holding value */
	HashMap<String,Integer>  memory = new HashMap<String,Integer>();


	public static class tiger3_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "tiger3"
	// D:\\Programmation\\albert22u\\Analyse_lexicale_et_syntaxique\\Tiger3.g:46:1: tiger3 : e1= expr -> ^( TAIGA $e1) ;
	public final Tiger3Parser.tiger3_return tiger3() throws RecognitionException {
		Tiger3Parser.tiger3_return retval = new Tiger3Parser.tiger3_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		ParserRuleReturnScope e1 =null;

		RewriteRuleSubtreeStream stream_expr=new RewriteRuleSubtreeStream(adaptor,"rule expr");

		try {
			// D:\\Programmation\\albert22u\\Analyse_lexicale_et_syntaxique\\Tiger3.g:46:8: (e1= expr -> ^( TAIGA $e1) )
			// D:\\Programmation\\albert22u\\Analyse_lexicale_et_syntaxique\\Tiger3.g:46:10: e1= expr
			{
			pushFollow(FOLLOW_expr_in_tiger3122);
			e1=expr();
			state._fsp--;

			stream_expr.add(e1.getTree());
			// AST REWRITE
			// elements: e1
			// token labels: 
			// rule labels: e1, retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_e1=new RewriteRuleSubtreeStream(adaptor,"rule e1",e1!=null?e1.getTree():null);
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (Object)adaptor.nil();
			// 46:18: -> ^( TAIGA $e1)
			{
				// D:\\Programmation\\albert22u\\Analyse_lexicale_et_syntaxique\\Tiger3.g:46:21: ^( TAIGA $e1)
				{
				Object root_1 = (Object)adaptor.nil();
				root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(TAIGA, "TAIGA"), root_1);
				adaptor.addChild(root_1, stream_e1.nextTree());
				adaptor.addChild(root_0, root_1);
				}

			}


			retval.tree = root_0;

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "tiger3"


	public static class expr_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "expr"
	// D:\\Programmation\\albert22u\\Analyse_lexicale_et_syntaxique\\Tiger3.g:48:1: expr : ( nilexp | affect | type_id ( '{' ( field_list )* '}' )? | ifop | forop | whileop | breakexp |l= letexp (decl= declaration_list )? inexp (e= expr_seq )? endexp -> ^( $l ( ^( DECLARATIONS $decl) )? ( ^( BLOCK $e) )? ) );
	public final Tiger3Parser.expr_return expr() throws RecognitionException {
		Tiger3Parser.expr_return retval = new Tiger3Parser.expr_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token char_literal4=null;
		Token char_literal6=null;
		ParserRuleReturnScope l =null;
		ParserRuleReturnScope decl =null;
		ParserRuleReturnScope e =null;
		ParserRuleReturnScope nilexp1 =null;
		ParserRuleReturnScope affect2 =null;
		ParserRuleReturnScope type_id3 =null;
		ParserRuleReturnScope field_list5 =null;
		ParserRuleReturnScope ifop7 =null;
		ParserRuleReturnScope forop8 =null;
		ParserRuleReturnScope whileop9 =null;
		ParserRuleReturnScope breakexp10 =null;
		ParserRuleReturnScope inexp11 =null;
		ParserRuleReturnScope endexp12 =null;

		Object char_literal4_tree=null;
		Object char_literal6_tree=null;
		RewriteRuleSubtreeStream stream_expr_seq=new RewriteRuleSubtreeStream(adaptor,"rule expr_seq");
		RewriteRuleSubtreeStream stream_letexp=new RewriteRuleSubtreeStream(adaptor,"rule letexp");
		RewriteRuleSubtreeStream stream_inexp=new RewriteRuleSubtreeStream(adaptor,"rule inexp");
		RewriteRuleSubtreeStream stream_endexp=new RewriteRuleSubtreeStream(adaptor,"rule endexp");
		RewriteRuleSubtreeStream stream_declaration_list=new RewriteRuleSubtreeStream(adaptor,"rule declaration_list");

		try {
			// D:\\Programmation\\albert22u\\Analyse_lexicale_et_syntaxique\\Tiger3.g:48:6: ( nilexp | affect | type_id ( '{' ( field_list )* '}' )? | ifop | forop | whileop | breakexp |l= letexp (decl= declaration_list )? inexp (e= expr_seq )? endexp -> ^( $l ( ^( DECLARATIONS $decl) )? ( ^( BLOCK $e) )? ) )
			int alt5=8;
			switch ( input.LA(1) ) {
			case 65:
				{
				alt5=1;
				}
				break;
			case ID:
			case INT:
			case STRING:
			case 36:
			case 41:
				{
				alt5=2;
				}
				break;
			case 63:
			case 67:
				{
				alt5=3;
				}
				break;
			case 61:
				{
				alt5=4;
				}
				break;
			case 59:
				{
				alt5=5;
				}
				break;
			case 73:
				{
				alt5=6;
				}
				break;
			case 55:
				{
				alt5=7;
				}
				break;
			case 64:
				{
				alt5=8;
				}
				break;
			default:
				NoViableAltException nvae =
					new NoViableAltException("", 5, 0, input);
				throw nvae;
			}
			switch (alt5) {
				case 1 :
					// D:\\Programmation\\albert22u\\Analyse_lexicale_et_syntaxique\\Tiger3.g:48:8: nilexp
					{
					root_0 = (Object)adaptor.nil();


					pushFollow(FOLLOW_nilexp_in_expr139);
					nilexp1=nilexp();
					state._fsp--;

					adaptor.addChild(root_0, nilexp1.getTree());

					}
					break;
				case 2 :
					// D:\\Programmation\\albert22u\\Analyse_lexicale_et_syntaxique\\Tiger3.g:49:4: affect
					{
					root_0 = (Object)adaptor.nil();


					pushFollow(FOLLOW_affect_in_expr144);
					affect2=affect();
					state._fsp--;

					adaptor.addChild(root_0, affect2.getTree());

					}
					break;
				case 3 :
					// D:\\Programmation\\albert22u\\Analyse_lexicale_et_syntaxique\\Tiger3.g:50:4: type_id ( '{' ( field_list )* '}' )?
					{
					root_0 = (Object)adaptor.nil();


					pushFollow(FOLLOW_type_id_in_expr149);
					type_id3=type_id();
					state._fsp--;

					adaptor.addChild(root_0, type_id3.getTree());

					// D:\\Programmation\\albert22u\\Analyse_lexicale_et_syntaxique\\Tiger3.g:50:12: ( '{' ( field_list )* '}' )?
					int alt2=2;
					int LA2_0 = input.LA(1);
					if ( (LA2_0==74) ) {
						alt2=1;
					}
					switch (alt2) {
						case 1 :
							// D:\\Programmation\\albert22u\\Analyse_lexicale_et_syntaxique\\Tiger3.g:50:14: '{' ( field_list )* '}'
							{
							char_literal4=(Token)match(input,74,FOLLOW_74_in_expr153); 
							char_literal4_tree = (Object)adaptor.create(char_literal4);
							adaptor.addChild(root_0, char_literal4_tree);

							// D:\\Programmation\\albert22u\\Analyse_lexicale_et_syntaxique\\Tiger3.g:50:18: ( field_list )*
							loop1:
							while (true) {
								int alt1=2;
								int LA1_0 = input.LA(1);
								if ( (LA1_0==ID) ) {
									alt1=1;
								}

								switch (alt1) {
								case 1 :
									// D:\\Programmation\\albert22u\\Analyse_lexicale_et_syntaxique\\Tiger3.g:50:18: field_list
									{
									pushFollow(FOLLOW_field_list_in_expr155);
									field_list5=field_list();
									state._fsp--;

									adaptor.addChild(root_0, field_list5.getTree());

									}
									break;

								default :
									break loop1;
								}
							}

							char_literal6=(Token)match(input,76,FOLLOW_76_in_expr158); 
							char_literal6_tree = (Object)adaptor.create(char_literal6);
							adaptor.addChild(root_0, char_literal6_tree);

							}
							break;

					}

					}
					break;
				case 4 :
					// D:\\Programmation\\albert22u\\Analyse_lexicale_et_syntaxique\\Tiger3.g:51:4: ifop
					{
					root_0 = (Object)adaptor.nil();


					pushFollow(FOLLOW_ifop_in_expr165);
					ifop7=ifop();
					state._fsp--;

					adaptor.addChild(root_0, ifop7.getTree());

					}
					break;
				case 5 :
					// D:\\Programmation\\albert22u\\Analyse_lexicale_et_syntaxique\\Tiger3.g:52:4: forop
					{
					root_0 = (Object)adaptor.nil();


					pushFollow(FOLLOW_forop_in_expr170);
					forop8=forop();
					state._fsp--;

					adaptor.addChild(root_0, forop8.getTree());

					}
					break;
				case 6 :
					// D:\\Programmation\\albert22u\\Analyse_lexicale_et_syntaxique\\Tiger3.g:53:4: whileop
					{
					root_0 = (Object)adaptor.nil();


					pushFollow(FOLLOW_whileop_in_expr175);
					whileop9=whileop();
					state._fsp--;

					adaptor.addChild(root_0, whileop9.getTree());

					}
					break;
				case 7 :
					// D:\\Programmation\\albert22u\\Analyse_lexicale_et_syntaxique\\Tiger3.g:54:4: breakexp
					{
					root_0 = (Object)adaptor.nil();


					pushFollow(FOLLOW_breakexp_in_expr180);
					breakexp10=breakexp();
					state._fsp--;

					adaptor.addChild(root_0, breakexp10.getTree());

					}
					break;
				case 8 :
					// D:\\Programmation\\albert22u\\Analyse_lexicale_et_syntaxique\\Tiger3.g:55:4: l= letexp (decl= declaration_list )? inexp (e= expr_seq )? endexp
					{
					pushFollow(FOLLOW_letexp_in_expr187);
					l=letexp();
					state._fsp--;

					stream_letexp.add(l.getTree());
					// D:\\Programmation\\albert22u\\Analyse_lexicale_et_syntaxique\\Tiger3.g:55:18: (decl= declaration_list )?
					int alt3=2;
					int LA3_0 = input.LA(1);
					if ( (LA3_0==60||LA3_0==70||LA3_0==72) ) {
						alt3=1;
					}
					switch (alt3) {
						case 1 :
							// D:\\Programmation\\albert22u\\Analyse_lexicale_et_syntaxique\\Tiger3.g:55:18: decl= declaration_list
							{
							pushFollow(FOLLOW_declaration_list_in_expr192);
							decl=declaration_list();
							state._fsp--;

							stream_declaration_list.add(decl.getTree());
							}
							break;

					}

					pushFollow(FOLLOW_inexp_in_expr196);
					inexp11=inexp();
					state._fsp--;

					stream_inexp.add(inexp11.getTree());
					// D:\\Programmation\\albert22u\\Analyse_lexicale_et_syntaxique\\Tiger3.g:55:45: (e= expr_seq )?
					int alt4=2;
					int LA4_0 = input.LA(1);
					if ( (LA4_0==ID||LA4_0==INT||LA4_0==STRING||LA4_0==36||LA4_0==41||LA4_0==55||LA4_0==59||LA4_0==61||(LA4_0 >= 63 && LA4_0 <= 65)||LA4_0==67||LA4_0==73) ) {
						alt4=1;
					}
					switch (alt4) {
						case 1 :
							// D:\\Programmation\\albert22u\\Analyse_lexicale_et_syntaxique\\Tiger3.g:55:45: e= expr_seq
							{
							pushFollow(FOLLOW_expr_seq_in_expr200);
							e=expr_seq();
							state._fsp--;

							stream_expr_seq.add(e.getTree());
							}
							break;

					}

					pushFollow(FOLLOW_endexp_in_expr204);
					endexp12=endexp();
					state._fsp--;

					stream_endexp.add(endexp12.getTree());
					// AST REWRITE
					// elements: decl, e, l
					// token labels: 
					// rule labels: decl, e, l, retval
					// token list labels: 
					// rule list labels: 
					// wildcard labels: 
					retval.tree = root_0;
					RewriteRuleSubtreeStream stream_decl=new RewriteRuleSubtreeStream(adaptor,"rule decl",decl!=null?decl.getTree():null);
					RewriteRuleSubtreeStream stream_e=new RewriteRuleSubtreeStream(adaptor,"rule e",e!=null?e.getTree():null);
					RewriteRuleSubtreeStream stream_l=new RewriteRuleSubtreeStream(adaptor,"rule l",l!=null?l.getTree():null);
					RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

					root_0 = (Object)adaptor.nil();
					// 56:4: -> ^( $l ( ^( DECLARATIONS $decl) )? ( ^( BLOCK $e) )? )
					{
						// D:\\Programmation\\albert22u\\Analyse_lexicale_et_syntaxique\\Tiger3.g:56:7: ^( $l ( ^( DECLARATIONS $decl) )? ( ^( BLOCK $e) )? )
						{
						Object root_1 = (Object)adaptor.nil();
						root_1 = (Object)adaptor.becomeRoot(stream_l.nextNode(), root_1);
						// D:\\Programmation\\albert22u\\Analyse_lexicale_et_syntaxique\\Tiger3.g:56:12: ( ^( DECLARATIONS $decl) )?
						if ( stream_decl.hasNext() ) {
							// D:\\Programmation\\albert22u\\Analyse_lexicale_et_syntaxique\\Tiger3.g:56:12: ^( DECLARATIONS $decl)
							{
							Object root_2 = (Object)adaptor.nil();
							root_2 = (Object)adaptor.becomeRoot((Object)adaptor.create(DECLARATIONS, "DECLARATIONS"), root_2);
							adaptor.addChild(root_2, stream_decl.nextTree());
							adaptor.addChild(root_1, root_2);
							}

						}
						stream_decl.reset();

						// D:\\Programmation\\albert22u\\Analyse_lexicale_et_syntaxique\\Tiger3.g:56:35: ( ^( BLOCK $e) )?
						if ( stream_e.hasNext() ) {
							// D:\\Programmation\\albert22u\\Analyse_lexicale_et_syntaxique\\Tiger3.g:56:35: ^( BLOCK $e)
							{
							Object root_2 = (Object)adaptor.nil();
							root_2 = (Object)adaptor.becomeRoot((Object)adaptor.create(BLOCK, "BLOCK"), root_2);
							adaptor.addChild(root_2, stream_e.nextTree());
							adaptor.addChild(root_1, root_2);
							}

						}
						stream_e.reset();

						adaptor.addChild(root_0, root_1);
						}

					}


					retval.tree = root_0;

					}
					break;

			}
			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "expr"


	public static class expr_list_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "expr_list"
	// D:\\Programmation\\albert22u\\Analyse_lexicale_et_syntaxique\\Tiger3.g:59:1: expr_list : e1= expr ( ',' e2= expr_list )? -> $e1 ( $e2)? ;
	public final Tiger3Parser.expr_list_return expr_list() throws RecognitionException {
		Tiger3Parser.expr_list_return retval = new Tiger3Parser.expr_list_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token char_literal13=null;
		ParserRuleReturnScope e1 =null;
		ParserRuleReturnScope e2 =null;

		Object char_literal13_tree=null;
		RewriteRuleTokenStream stream_40=new RewriteRuleTokenStream(adaptor,"token 40");
		RewriteRuleSubtreeStream stream_expr_list=new RewriteRuleSubtreeStream(adaptor,"rule expr_list");
		RewriteRuleSubtreeStream stream_expr=new RewriteRuleSubtreeStream(adaptor,"rule expr");

		try {
			// D:\\Programmation\\albert22u\\Analyse_lexicale_et_syntaxique\\Tiger3.g:59:12: (e1= expr ( ',' e2= expr_list )? -> $e1 ( $e2)? )
			// D:\\Programmation\\albert22u\\Analyse_lexicale_et_syntaxique\\Tiger3.g:59:14: e1= expr ( ',' e2= expr_list )?
			{
			pushFollow(FOLLOW_expr_in_expr_list243);
			e1=expr();
			state._fsp--;

			stream_expr.add(e1.getTree());
			// D:\\Programmation\\albert22u\\Analyse_lexicale_et_syntaxique\\Tiger3.g:59:22: ( ',' e2= expr_list )?
			int alt6=2;
			int LA6_0 = input.LA(1);
			if ( (LA6_0==40) ) {
				alt6=1;
			}
			switch (alt6) {
				case 1 :
					// D:\\Programmation\\albert22u\\Analyse_lexicale_et_syntaxique\\Tiger3.g:59:23: ',' e2= expr_list
					{
					char_literal13=(Token)match(input,40,FOLLOW_40_in_expr_list246);  
					stream_40.add(char_literal13);

					pushFollow(FOLLOW_expr_list_in_expr_list250);
					e2=expr_list();
					state._fsp--;

					stream_expr_list.add(e2.getTree());
					}
					break;

			}

			// AST REWRITE
			// elements: e1, e2
			// token labels: 
			// rule labels: e1, e2, retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_e1=new RewriteRuleSubtreeStream(adaptor,"rule e1",e1!=null?e1.getTree():null);
			RewriteRuleSubtreeStream stream_e2=new RewriteRuleSubtreeStream(adaptor,"rule e2",e2!=null?e2.getTree():null);
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (Object)adaptor.nil();
			// 60:4: -> $e1 ( $e2)?
			{
				adaptor.addChild(root_0, stream_e1.nextTree());
				// D:\\Programmation\\albert22u\\Analyse_lexicale_et_syntaxique\\Tiger3.g:60:12: ( $e2)?
				if ( stream_e2.hasNext() ) {
					adaptor.addChild(root_0, stream_e2.nextTree());
				}
				stream_e2.reset();

			}


			retval.tree = root_0;

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "expr_list"


	public static class expr_seq_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "expr_seq"
	// D:\\Programmation\\albert22u\\Analyse_lexicale_et_syntaxique\\Tiger3.g:63:1: expr_seq : e1= expr (pv= ';' e2= expr_seq )? -> $e1 ( $e2)? ;
	public final Tiger3Parser.expr_seq_return expr_seq() throws RecognitionException {
		Tiger3Parser.expr_seq_return retval = new Tiger3Parser.expr_seq_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token pv=null;
		ParserRuleReturnScope e1 =null;
		ParserRuleReturnScope e2 =null;

		Object pv_tree=null;
		RewriteRuleTokenStream stream_46=new RewriteRuleTokenStream(adaptor,"token 46");
		RewriteRuleSubtreeStream stream_expr_seq=new RewriteRuleSubtreeStream(adaptor,"rule expr_seq");
		RewriteRuleSubtreeStream stream_expr=new RewriteRuleSubtreeStream(adaptor,"rule expr");

		try {
			// D:\\Programmation\\albert22u\\Analyse_lexicale_et_syntaxique\\Tiger3.g:63:10: (e1= expr (pv= ';' e2= expr_seq )? -> $e1 ( $e2)? )
			// D:\\Programmation\\albert22u\\Analyse_lexicale_et_syntaxique\\Tiger3.g:63:12: e1= expr (pv= ';' e2= expr_seq )?
			{
			pushFollow(FOLLOW_expr_in_expr_seq278);
			e1=expr();
			state._fsp--;

			stream_expr.add(e1.getTree());
			// D:\\Programmation\\albert22u\\Analyse_lexicale_et_syntaxique\\Tiger3.g:63:21: (pv= ';' e2= expr_seq )?
			int alt7=2;
			int LA7_0 = input.LA(1);
			if ( (LA7_0==46) ) {
